<resources>
    <string name="app_name">PuppyGram</string>
    <string name="welcome_to">Welcome to</string>
    <string name="create_new_account">Create new account</string>
    <string name="log_in">Log In</string>
    <string name="logo">LOGO</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="pupperson">Pupperson</string>
    <string name="user_name">User Name</string>
    <string name="first_name">First Name</string>
    <string name="spot">Spot</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="puppylove123">PuppyLove123</string>
    <string name="spotpupperson_pupmail_com">spotpupperson@pupmail.com</string>
    <string name="pawprints">pawprints</string>
    <string name="password">Password</string>
    <string name="users_profile_picture">Users profile picture</string>
    <string name="posts">Posts</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="zero">0</string>
    <string name="profilename">ProfileName</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="username">Username</string>
    <string name="please_enter_your_login_information_below">Please enter your login information below</string>
    <string name="please_provide_your_information_on_this_page">Please provide your information on this page</string>

    <string name="this_page_will_ask_you_about_your_pets_you_would_like_to_include_on_your_account_please_provide_your_information">This page will ask you about your pets you would like to include on your account. Please provide your information.</string>
    <string name="welcome_to_your_new_account">Welcome to Your New Account!</string>
    <string name="this_page_will_ask_you_about_the_pets_you_would_like_to_include_on_your_account_please_provide_your_information_below">This page will ask you about the pets you would like to include on your account. Please provide your information below</string>
    <string name="what_kind_of_animals_do_you_have">What kind of animals do you have?</string>
    <string name="dog">Dog</string>
    <string name="live_stock">Live stock</string>
    <string name="rodent">Rodent</string>
    <string name="fish">Fish</string>
    <string name="cat">Cat</string>
    <string name="bird">Bird</string>
    <string name="picture_to_upload">picture to upload</string>
    <string name="post">Post</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="create_new_post">Create new post</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="please_provide_your_information_to_verify_that_it_is_you">Please provide your information to verify that it is you.</string>
    <string name="your_username_here">Your username here</string>
    <string name="your_email_here">Your email here</string>
    <string name="verify_my_info">Verify my info</string>
    <string name="oops_didn_t_mean_to_come_here"><![CDATA[<- Oops, didn\'t mean to come here]]></string>
    <string name="success">Success!</string>
    <string name="now_that_your_information_is_verified_you_are_now_able_to_create_a_new_password_for_your_account">Now that your information is verified, you are now able to create a new password for your account</string>
    <string name="new_password">New password</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="load_picture">Load Picture</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="_0">0</string>
    <string name="title_activity_find_account">FindAccount</string>
</resources>