<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4012A9BD"
    tools:context=".new_account2" >

    <CheckBox
        android:id="@+id/birdBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/bird"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fishBox" />

    <CheckBox
        android:id="@+id/livestockBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/live_stock"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rodentBox" />

    <CheckBox
        android:id="@+id/rodentBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/rodent"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birdBox" />

    <CheckBox
        android:id="@+id/fishBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/fish"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/catBox" />

    <CheckBox
        android:id="@+id/catBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/cat"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dogBox" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="264dp"
        android:layout_height="27dp"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:text="@string/what_kind_of_animals_do_you_have"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="350dp"
        android:layout_height="82dp"
        android:fontFamily="casual"
        android:text="@string/this_page_will_ask_you_about_the_pets_you_would_like_to_include_on_your_account_please_provide_your_information_below"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/welcome_to_your_new_account"
        android:textAlignment="center"
        android:textColor="#262827"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Welcome to Your New Account" />

    <CheckBox
        android:id="@+id/dogBox"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/dog"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ImageButton
        android:id="@+id/next1"
        android:layout_width="62dp"
        android:layout_height="59dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="40dp"
        android:background="#4012A9BD"
        android:rotation="180"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="?attr/homeAsUpIndicator"
        android:contentDescription="@string/todo" />

</androidx.constraintlayout.widget.ConstraintLayout>