<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#54FFEB3B"
    tools:context=".NewAccount">

    <Button
        android:id="@+id/Submit"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:color="#6B3D0F"
        android:fontFamily="casual"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <TextView
        android:id="@+id/passwordOne"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/passwordTwo"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/password"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordOne" />

    <TextView
        android:id="@+id/email"
        android:layout_width="92dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/e_mail"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/userNameInput"
        android:layout_width="182dp"
        android:layout_height="42dp"
        android:layout_marginStart="174dp"
        android:layout_marginTop="270dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/puppylove123"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstName2"
        android:layout_width="135dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="160dp"
        android:fontFamily="casual"
        android:text="@string/first_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createNewAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Create New Account" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="130dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:fontFamily="casual"
        android:text="@string/last_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName2" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="134dp"
        android:layout_height="38dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/user_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="203dp"
        android:layout_height="46dp"
        android:layout_marginTop="160dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/spot"
        android:inputType="textPersonName"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.023"
        app:layout_constraintStart_toEndOf="@+id/lastName"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="209dp"
        android:layout_height="43dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/pupperson"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/lastName"
        app:layout_constraintTop_toBottomOf="@+id/firstNameInput" />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/spotpupperson_pupmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.294"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/userNameInput" />

    <EditText
        android:id="@+id/passwordOneInput"
        android:layout_width="209dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pawprints"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passwordOne"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passwordOneInput2"
        android:layout_width="175dp"
        android:layout_height="45dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="56dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pawprints"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passwordOne"
        app:layout_constraintTop_toBottomOf="@+id/emailInput" />

    <EditText
        android:id="@+id/passwordTwoInput"
        android:layout_width="225dp"
        android:layout_height="55dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="584dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/pawprints"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/passwordTwo"
        app:layout_constraintTop_toBottomOf="@+id/passwordOneInput" />

</androidx.constraintlayout.widget.ConstraintLayout>