<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4012A9BD"
    tools:context=".forgot_password1">

    <Button
        android:id="@+id/back"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:color="#6B3D0F"
        android:fontFamily="casual"
        android:text="@string/oops_didn_t_mean_to_come_here"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <Button
        android:id="@+id/verify"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:color="#6B3D0F"
        android:fontFamily="casual"
        android:text="@string/verify_my_info"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="casual"
        android:text="@string/please_provide_your_information_to_verify_that_it_is_you"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <EditText
        android:id="@+id/usernameVerify"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/your_username_here"
        android:inputType="textPersonName"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:autofillHints="" />

    <EditText
        android:id="@+id/emailVerify"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/your_email_here"
        android:inputType="textEmailAddress"
        android:textColor="#AB000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameVerify"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>