<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4012A9BD"
    tools:context=".forgot_password2">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="casual"
        android:text="@string/success"
        android:textColor="#AB000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/now_that_your_information_is_verified_you_are_now_able_to_create_a_new_password_for_your_account"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/updatePass1"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/new_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        android:autofillHints="" />

    <EditText
        android:id="@+id/updatePass2"
        android:layout_width="250sp"
        android:layout_height="50sp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/re_enter_password"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.557"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/updatePass1"
        android:autofillHints="" />

    <Button
        android:id="@+id/button"
        android:layout_width="250sp"
        android:layout_height="75sp"
        android:fontFamily="casual"
        android:text="@string/back_to_login"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.812" />
</androidx.constraintlayout.widget.ConstraintLayout>