<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4012A9BD"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <Button
        android:id="@+id/logIn2"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginBottom="24dp"
        android:color="#6B3D0F"
        android:fontFamily="casual"
        android:text="@string/log_in"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/forgotPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/forgotPass"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:color="#6B3D0F"
        android:fontFamily="casual"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias=".5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="casual"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Login" />

    <EditText
        android:id="@+id/userNameLog"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:textColor="#AB000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/PasswordLog"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="48dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="casual"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="#AB000000"
        app:layout_constraintBottom_toTopOf="@+id/logIn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="casual"
        android:text="@string/please_enter_your_login_information_below"
        android:textAlignment="center"
        android:textColor="#AB000000"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/userNameLog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

</androidx.constraintlayout.widget.ConstraintLayout>